tests-integration/fixtures/checking/1772824380_binder_instantiation/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Just :: forall (@a :: Type). (a :: Type) -> Maybe (a :: Type)
Nothing :: forall (@a :: Type). Maybe (a :: Type)
MkId :: (forall (a :: Type). (a :: Type) -> (a :: Type)) -> Id
identity :: forall (a :: Type). Maybe ((a :: Type) -> (a :: Type))
test :: Partial => Int
test2 :: Id -> Boolean
test3 :: Partial => Int
test4 :: Id -> Boolean

Types
Maybe :: Type -> Type
Id :: Type

Roles
Maybe = [Representational]
Id = []

Diagnostics
error[CannotUnify]: Cannot unify 'Boolean' with 'Int'
  --> 11:31..11:35
   |
11 |   Just f -> let _ = f 42 in f true
   |                               ^~~~
error[CannotUnify]: Cannot unify 'Boolean' with 'Int'
  --> 20:24..20:28
   |
20 |   in let _ = f 42 in f true
   |                        ^~~~
